Страница готова (и десктоп и мобилка), осталось сделать попап с формой

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,9 @@
 .footer {
-  border: .5px dashed white;
   min-height: 78px;
+}
+
+@media screen and (max-width: 618px) {
+  .footer {
+    min-height: 50px;
+  }
 }
