--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,4 +1,13 @@
 .footer__copyright {
   font-size: 18px;
+  line-height: 1;
   color: #545454;
+  padding-top: 6px;
+}
+
+@media screen and (max-width: 618px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 0.9;
+  }
 }
