--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,5 +2,14 @@
   width: 142px;
   height: 33px;
   background-image: url(../../../images/logo.svg);
-  margin-left: 27px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-left: 8px;
+
+}
+
+@media screen and (max-width: 618px) {
+  .header__logo {
+    height: 24.4px;
+  }
 }
