--- a/blocks/page-btn/_type/page-btn_type_add.css
+++ b/blocks/page-btn/_type/page-btn_type_add.css
@@ -1,7 +1,13 @@
 .page-btn_type_add {
   border: 2px solid white;
   border-radius: 2px;
-  width: 150px;
+  min-width: 150px;
   height: 50px;
   align-self: center;
+}
+
+@media screen and (max-width: 618px) {
+  .page-btn_type_add {
+    margin-top: 32px;
+  }
 }
