--- a/blocks/page/__section/_place/page__section_place_cards.css
+++ b/blocks/page/__section/_place/page__section_place_cards.css
@@ -1,3 +1,9 @@
-.page__section_place_header {
+.page__section_place_cards {
   margin-top: 50px;
+}
+
+@media screen and (max-width: 618px) {
+  .page__section_place_cards {
+    margin-top: 36px;
+  }
 }
