--- a/blocks/page/__section/_place/page__section_place_footer.css
+++ b/blocks/page/__section/_place/page__section_place_footer.css
@@ -1,3 +1,9 @@
 .page__section_place_footer {
   margin-top: 66px;
 }
+
+@media screen and (max-width: 618px) {
+  .page__section_place_footer {
+    margin-top: 48px;
+  }
+}
