--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,10 +1,16 @@
 .profile__name {
   /* border: .5px dashed yellow; */
   font-size: 42px;
-  line-height: 1.14;
+  line-height: 1.15;
   font-weight: 500;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
   align-self: end;
+}
+
+@media screen and (max-width: 618px) {
+  .profile__name {
+    font-size: 27px;
+  }
 }
