--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,3 +3,9 @@
   display: grid;
   grid-template-columns: min-content 1fr min-content;
 }
+
+@media screen and (max-width: 618px) {
+  .profile {
+    grid-template-columns: 1fr;
+  }
+}
