Внес рекомендованные и обязательные правки после ревью

--- a/blocks/page-btn/page-btn.css
+++ b/blocks/page-btn/page-btn.css
@@ -1,12 +1,11 @@
 .page-btn {
   box-sizing: border-box;
   background: none;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  border: none; 
   font-size: 18px;
   padding: 0;
+  background-repeat: no-repeat;
+  background-position: center;
   transition: opacity .08s linear, transform .05s linear;
 }
 
