--- a/blocks/cards/__like-btn/_active/cards__like-btn_active.css
+++ b/blocks/cards/__like-btn/_active/cards__like-btn_active.css
@@ -1,8 +1,8 @@
-.cards__like-btn-ico_active {
+.cards__like-btn_active {
   background-image: url(../../../../images/like_btn_ico/like_btn_ico_active.svg);
   transition: transform .1s linear;
 }
 
-.cards__like-btn-ico_active:hover {
+.cards__like-btn_active:hover {
   opacity: 100%;
 }
