--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,6 +1,7 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/page/_hold/page_hold.css);
 @import url(../blocks/page/__section/page__section.css);
 @import url(../blocks/page/__section/_place/page__section_place_header.css);
 @import url(../blocks/page/__section/_place/page__section_place_profile.css);
