--- a/src/blocks/cards/__like-btn/cards__like-btn.css
+++ b/src/blocks/cards/__like-btn/cards__like-btn.css
@@ -1,11 +1,15 @@
 .cards__like-btn {
-  margin: 0 20px 0 35px;
   width: 22px;
   height: 19px;
   background-image: url(../../../images/like_btn_ico/like_btn_ico_disabled.svg);
-  transition: opacity 0.1s linear;
+  transition: all 0.08s linear;
 }
 
 .cards__like-btn:hover {
   opacity: 50%;
+  transform: scale(1.15);
+}
+
+.cards__like-btn:active {
+  transform: scale(1);
 }
