--- a/src/blocks/popup/__close-btn/popup__close-btn.css
+++ b/src/blocks/popup/__close-btn/popup__close-btn.css
@@ -9,6 +9,10 @@
   transform: rotate(45deg);
 }
 
+.popup__close-btn:active {
+  transform: rotate(45deg) scale(.9);
+}
+
 @media screen and (max-width: 618px) {
   .popup__close-btn {
     width: 26px;
