--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,13 +1,15 @@
 .popup__container {
+  display: flex;
   position: relative;
   background-color: #fff;
   border-radius: 10px;
   margin: 19px;
   color: #000;
-  display: flex;
   flex-direction: column;
   align-content: center;
   padding: 0 36px;
+  transition: all 0.3s ease;
+  transform: translate(0, -100%)
 }
 
 @media screen and (max-width: 618px) {
