--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,13 +1,10 @@
 .profile__avatar {
-  /* border: .5px dashed white; */
   width: 120px;
   height: 120px;
   border-radius: 50%;
   object-fit: cover;
-}
-
-@media screen and (max-width: 618px) {
-  .profile__avatar {
-    margin: 0 auto;
-  }
+  object-position: top;
+  color: transparent;
+  /* background-image: url(../../../images/default_avatar.png); */
+  background-size: cover;
 }
