--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -12,22 +12,32 @@
 @import url(../blocks/page-btn/page-btn.css);
 @import url(../blocks/page-btn/_type/page-btn_type_edit.css);
 @import url(../blocks/page-btn/_type/page-btn_type_add.css);
+@import url(../blocks/spinner/spinner.css);
+@import url(../blocks/spinner/_visible/spinner_visible.css);
 /*Шапка сайта*/
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 /*Основная часть сайта*/
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar/_error/profile__avatar_error.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__about/profile__about.css);
 @import url(../blocks/cards/__list/cards__list.css);
 @import url(../blocks/cards/__item/cards__item.css);
 @import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__image/_error/cards__image_error.css);
 @import url(../blocks/cards/__heading/cards__heading.css);
+@import url(../blocks/cards/__like-container/cards__like-container.css);
 @import url(../blocks/cards/__like-btn/cards__like-btn.css);
+@import url(../blocks/cards/__like-counter/cards__like-counter.css);
+@import url(../blocks/cards/__like-counter/_active/cards__like-counter_active.css);
 @import url(../blocks/cards/__like-btn/_active/cards__like-btn_active.css);
 @import url(../blocks/cards/__trash-btn/cards__trash-btn.css);
+@import url(../blocks/cards/__trash-btn/_visible/cards__trash-btn_visible.css);
+@import url(../blocks/cards/__spinner/cards__spinner.css);
 /*Подвал сайта*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -35,8 +45,10 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__container/_opened/popup__container_opened.css);
 @import url(../blocks/popup/__close-btn/popup__close-btn.css);
 @import url(../blocks/form/__heading/form__heading.css);
+@import url(../blocks/form/__heading/_type/form__heading_type_confirm.css);
 @import url(../blocks/form/__field/form__field.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__input/_invalid/form__input_invalid.css);
