--- a/src/blocks/cards/__image/_error/cards__image_error.css
+++ b/src/blocks/cards/__image/_error/cards__image_error.css
@@ -1,4 +1,4 @@
 .cards__image_error {
-  background-image: url(../../../../images/default_avatar.jpg);
+  background-image: url(../../../../images/default_image.jpeg);
   background-size: cover;
 }
