--- a/src/blocks/cards/__like-counter/_active/cards__like-counter_active.css
+++ b/src/blocks/cards/__like-counter/_active/cards__like-counter_active.css
@@ -2,6 +2,6 @@
   visibility: visible;
   opacity: 100%;
   line-height: 0.8;
-  transition: all .13s ease;
+  transition: all 0.13s ease;
   position: inherit;
 }
