--- a/src/blocks/cards/__spinner/cards__spinner.css
+++ b/src/blocks/cards/__spinner/cards__spinner.css
@@ -7,5 +7,5 @@
   clip: rect(0, 3em, 3em, 1.5em);
   width: 3em;
   height: 3em;
-  box-shadow: inset 0 0 0 0.1em rgba(84, 84, 84, .7);
+  box-shadow: inset 0 0 0 0.1em rgba(84, 84, 84, 0.7);
 }
