--- a/src/blocks/form/__submit/_disabled/form__submit_disabled.css
+++ b/src/blocks/form/__submit/_disabled/form__submit_disabled.css
@@ -1,6 +1,6 @@
 .form__submit_disabled {
   pointer-events: none;
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid #000000;
   box-sizing: border-box;
   color: #000000;
