--- a/src/blocks/form/__submit/form__submit.css
+++ b/src/blocks/form/__submit/form__submit.css
@@ -8,7 +8,7 @@
   background-color: #000;
   color: #fff;
   cursor: pointer;
-  transition: opacity .08s linear, transform .05s linear;
+  transition: opacity 0.08s linear, transform 0.05s linear;
 }
 
 .form__submit:hover {
