--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,7 +2,7 @@
   /* border: .5px dashed white; */
   display: flex;
   min-height: 74px;
-  border-bottom: 1px solid rgba(84, 84, 84, .7);
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 618px) {
