--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -9,7 +9,7 @@
   align-content: center;
   padding: 0 36px;
   transition: all 0.3s ease;
-  transform: translate(0, -100%)
+  transform: translate(0, -100%);
 }
 
 @media screen and (max-width: 618px) {
