--- a/src/blocks/profile/__avatar-container/profile__avatar-container.css
+++ b/src/blocks/profile/__avatar-container/profile__avatar-container.css
@@ -4,7 +4,7 @@
   border-radius: 50%;
   overflow: hidden;
   cursor: pointer;
-  padding: .8px;
+  padding: 0.8px;
 }
 
 .profile__avatar-container::before {
@@ -34,12 +34,12 @@
 
 .profile__avatar-container:hover::before {
   opacity: 100%;
-  transition: all .08s ease-in;
+  transition: all 0.08s ease-in;
 }
 
 .profile__avatar-container:hover::after {
   opacity: 80%;
-  transition: all .08s ease-in;
+  transition: all 0.08s ease-in;
 }
 
 @media screen and (max-width: 618px) {
