--- a/src/blocks/cards/__image/cards__image.css
+++ b/src/blocks/cards/__image/cards__image.css
@@ -6,6 +6,7 @@
   grid-column: 1 / 3;
   grid-row: 1 / 2;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
   transition: all 0.2s ease-in-out;
   color: transparent;
 }
