--- a/src/blocks/page-btn/page-btn.css
+++ b/src/blocks/page-btn/page-btn.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
   transition: opacity 0.08s linear, transform 0.05s linear;
 }
 
