--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 .page__section_place_footer{margin-top:66px}@media screen and (max-width:618px){.page__section_place_footer{margin-top:48px}}
 .page__text{margin:0;padding:0}
 .page__list{line-height:0;list-style:none;margin:0;padding:0}
-.page-btn{background:none;background-position:50%;background-repeat:no-repeat;border:none;box-sizing:border-box;cursor:pointer;font-size:18px;padding:0;transition:opacity .08s linear,transform .05s linear}.page-btn:hover{opacity:60%}.page-btn:active{transform:scale(.95)}
+.page-btn{-webkit-tap-highlight-color:transparent;background:none;background-position:50%;background-repeat:no-repeat;border:none;box-sizing:border-box;cursor:pointer;font-size:18px;padding:0;transition:opacity .08s linear,transform .05s linear}.page-btn:hover{opacity:60%}.page-btn:active{transform:scale(.95)}
 .page-btn_type_edit{align-self:end;background-image:url(images/btn_edit_ico.8667ac4a523e8fc42e59.svg);background-size:45%;border:1px solid #fff;height:24px;margin:0 0 8px 19px;width:24px}@media screen and (max-width:618px){.page-btn_type_edit{height:18px;margin:0 0 5px 11px;width:18px}}
 .page-btn_type_add{align-self:center;background-image:url(images/btn_add_ico.d86bb2edc2f6eadb96b7.svg);border:2px solid #fff;border-radius:2px;height:50px;min-width:150px}@media screen and (max-width:618px){.page-btn_type_add{background-size:16px;margin-top:32px}}
 .spinner{display:none;left:50%;top:50%;transform:translate(-50%,-50%);z-index:99}.spinner,.spinner i:after{border-radius:50%;height:2em;position:absolute;width:2em}.spinner i:after{clip:rect(0,2em,2em,1em);-webkit-animation:spinner-circle .8s ease-in-out infinite;animation:spinner-circle .8s ease-in-out infinite;box-shadow:inset 0 0 0 .1em #fff;content:""}@-webkit-keyframes spinner-circle{0%{transform:rotate(-180deg)}to{transform:rotate(180deg)}}@keyframes spinner-circle{0%{transform:rotate(-180deg)}to{transform:rotate(180deg)}}
@@ -25,7 +25,7 @@
 .profile__about{font-size:18px;overflow:hidden;padding-top:10px;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:618px){.profile__about{font-size:14px}}
 .cards__list{-moz-column-gap:17px;column-gap:17px;display:grid;grid-auto-columns:282px;grid-auto-rows:361px;grid-template-columns:repeat(auto-fill,minmax(282px,1fr));grid-template-rows:361px;justify-content:center;row-gap:20px}
 .cards__item{align-items:center;background-color:#fff;border-radius:10px;display:grid;grid-template-columns:1fr -webkit-min-content;grid-template-columns:1fr min-content;grid-template-rows:282px 79px;overflow:hidden;position:relative}
-.cards__image{color:transparent;cursor:pointer;grid-column:1/3;grid-row:1/2;height:282px;-o-object-fit:cover;object-fit:cover;-o-object-position:top;object-position:top;transition:all .2s ease-in-out;width:100%}
+.cards__image{-webkit-tap-highlight-color:transparent;color:transparent;cursor:pointer;grid-column:1/3;grid-row:1/2;height:282px;-o-object-fit:cover;object-fit:cover;-o-object-position:top;object-position:top;transition:all .2s ease-in-out;width:100%}
 .cards__image_error{background-image:url(images/default_image.65428eaa3d66fd4917ae.jpeg);background-size:cover}
 .cards__heading{color:#000;font-size:24px;font-weight:900;line-height:1.15;overflow:hidden;padding-left:21px;text-overflow:ellipsis;white-space:nowrap}
 .cards__like-container{align-items:center;display:flex;flex-direction:column;justify-content:space-between;margin-right:20px;position:relative}
@@ -42,7 +42,7 @@
 .popup_opened{opacity:1;visibility:visible}
 .popup__container{align-content:center;background-color:#fff;border-radius:10px;color:#000;display:flex;flex-direction:column;margin:19px;padding:0 36px;position:relative;transform:translateY(-100%);transition:all .3s ease}@media screen and (max-width:618px){.popup__container{padding:0 22px}}
 .popup__container_opened{transform:translate(0);transition:all .3s ease}
-.popup__close-btn{background-image:url(images/popup-close-ico.15e00da284e9eef22f14.svg);background-size:contain;height:40px;position:absolute;right:-44px;top:-44px;transform:rotate(45deg);width:40px}.popup__close-btn:active{outline:none;transform:rotate(45deg) scale(.9)}@media screen and (max-width:618px){.popup__close-btn{height:26px;right:-3px;top:-39px;width:26px}}
+.popup__close-btn{-webkit-tap-highlight-color:transparent;background-image:url(images/popup-close-ico.15e00da284e9eef22f14.svg);background-size:contain;height:40px;position:absolute;right:-44px;top:-44px;transform:rotate(45deg);width:40px}.popup__close-btn:active{outline:none;transform:rotate(45deg) scale(.9)}@media screen and (max-width:618px){.popup__close-btn{height:26px;right:-3px;top:-39px;width:26px}}
 .form__heading{font-size:24px;font-weight:900;margin:34px 0 49px}@media screen and (max-width:618px){.form__heading{font-size:18px;margin:25px 0 74px}}
 .form__heading_type_confirm{margin-bottom:20px}
 .form__field{align-items:center;border:0;display:flex;flex-direction:column;margin:0;padding:0}
@@ -50,7 +50,7 @@
 .form__input_invalid{border-bottom:1px solid red}
 .form__input-error{align-self:flex-start;color:red;font-size:12px;font-weight:400;margin-top:5px;min-height:28px;opacity:0;transition:all .1s ease;visibility:hidden;width:358px}@media screen and (max-width:618px){.form__input-error{width:238px}}
 .form__input-error_active{opacity:1;visibility:visible}
-.form__submit{background-color:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;height:50px;margin:13px 0 35px;transition:opacity .08s linear,transform .05s linear;width:358px}.form__submit:hover{opacity:80%}@media screen and (max-width:618px){.form__submit{font-size:14px;height:46px;margin:12px 0 25px;width:238px}}
+.form__submit{-webkit-tap-highlight-color:transparent;background-color:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;height:50px;margin:13px 0 35px;transition:opacity .08s linear,transform .05s linear;width:358px}.form__submit:hover{opacity:80%}@media screen and (max-width:618px){.form__submit{font-size:14px;height:46px;margin:12px 0 25px;width:238px}}
 .form__submit_disabled{background:#fff;border:1px solid #000;box-sizing:border-box;color:#000;opacity:.2;pointer-events:none}
 .popup-photo{background-color:rgba(0,0,0,.9)}
 .popup-photo__container{background-color:transparent;border-radius:0;margin:0;padding:0}
