--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@
 .cards__image_error{background-image:url(images/default_image.65428eaa3d66fd4917ae.jpeg);background-size:cover}
 .cards__heading{color:#000;font-size:24px;font-weight:900;line-height:1.15;overflow:hidden;padding-left:21px;text-overflow:ellipsis;white-space:nowrap}
 .cards__like-container{align-items:center;display:flex;flex-direction:column;justify-content:space-between;margin-right:20px;position:relative}
-.cards__like-btn{background-image:url(images/like_btn_ico_disabled.87ed371465c7a6a1cd01.svg);height:19px;transition:all .08s linear;width:22px}.cards__like-btn:hover{opacity:50%;transform:scale(1.15)}.cards__like-btn:active{outline:none;transform:scale(1)}
+.cards__like-btn{-webkit-tap-highlight-color:transparent;background-image:url(images/like_btn_ico_disabled.87ed371465c7a6a1cd01.svg);height:19px;transition:all .08s linear;width:22px}.cards__like-btn:hover{opacity:50%;transform:scale(1.15)}.cards__like-btn:active{outline:none;transform:scale(1)}
 .cards__like-counter{color:#000;font-size:13px;margin-top:6px;opacity:0;position:absolute;visibility:hidden}
 .cards__like-counter_active{line-height:.8;opacity:100%;position:inherit;transition:all .13s ease;visibility:visible}
 .cards__like-btn_active{background-image:url(images/like_btn_ico_active.fe17a515669479b1e649.svg);transition:transform .1s linear}.cards__like-btn_active:hover{opacity:50%}
